--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <main> 
         <header>
             <img src="./img/left-arrow_smaller.png">
-            <h1>Min Inbjudan</h1> 
+            <h1>JAG FYLLER ÅR</h1> 
             <img style="rotate: 180deg" src="./img/left-arrow_smaller.png">
         </header>   
 
     <section id="event-descript">
-        <h2 style="align-self: center">Välkomna till Min Inbjudan </h2> 
+        <h2 style="align-self: center">Välkomna till min 35-årsfest! </h2> 
         <p> 
 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
         </p>
