--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 
-    <title>PROVE_YOUR_WORTH</title>
+    <title>Jessica Bird</title>
 
     <link rel="stylesheet" href="game.css">
     <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main>
-    <h1 id="point-string">High-score: 10p!</h1>
+    <h1 id="point-string">Jessica Bird</h1>
 
     <canvas id="canvas" width="270px" height="390px"></canvas>
     <script src="game.js"></script>
