--- a/index.html
+++ b/index.html
@@ -13,39 +13,50 @@
 <body>
     <main> 
         <header>
-            <img src="./img/left-arrow_smaller.png">
-            <h1>Min Inbjudan</h1> 
-            <img style="rotate: 180deg" src="./img/left-arrow_smaller.png">
+            <div></div>
+            <h1>JAG FYLLER ÅR - KOM PÅ FEST!!</h1> 
+            <div></div>
         </header>   
 
     <section id="event-descript">
-        <h2 style="align-self: center">Välkomna till Min Inbjudan </h2> 
+        <h2 style="align-self: center"><b>VAD ÄR DET SOM HÄNDER?</b></h2> 
         <p> 
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+I år är första och sista gången jag fyller 35 och detta vill jag SÅKLART fira tillsammans mer med en afton som går i hyggets och det glada livets tecken!
         </p>
-       <p> 
-It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+        <p>
+Ni är därför hjärtligt välkomna ner till den ljuva kontinenten där jag bjuder in till galej lördagen den 31 maj. Det kommer bli mat, dryck, dans, överraskningar (av varierad karaktär) och obegränsat med hygge - helt enkelt bara fantastiskt!
         </p>
-        <p>Här kan du lägga till ännu mer grejer!</p>
     </section>
 
     <section id="event-details">
-        <h3 style="align-self:center;">Evenemangsinfo:</h3>
-        <p><b>Where</b>: Hemma hos mig</p>
-        <p><b>When</b>: 16:00</p>
-        <p><b>Bring</b>: Beer</p>
+        <h3 style="align-self:center;">VAD SKA JAG HA PÅ MIG?</h3>
+        <p>Temat är <b>KOM SOM DIN FAVORITBANGER</b> - fri tolkning uppmuntras men tänk festligt, uppklätt och dansvänligt så är du där! 
+</p>
     </section>
 
-    <div id="anmalan-button-cntr">
-        <p>ANMÄLAN</p>
-    </div>
+    <section id="event-details">
+        <h3 style="align-self:center;">NÄR VAR OCH HUR?</h3>
+        <p><b>Datum:</b>31 Maj 2025</p>
+        <p><b>Tid:</b>18.00 tills solen går upp</p>
+        <p><b>Plats:</b> Exakt location är To Be Announced, men det är ett nöjespalats i centrala Köpenhamn (Indre By), cirka 10 minuters gång från Hovedbanegården och Nørreport
+        </p>
+    </section>
+    <section id="event-descript">
+        <p>
+        För att kunna planera en så fantastisk afton som möjligt ber jag er fylla i formuläret nedan innan 20 april tack, och har man frågor eller vill bara vill stämma av outfits eller något annat är det bara att hojta till <3</p><p>
+        <b>English:</b> This is the year I'm turning 35 for the first and only time, so of course this needs to be CELEBRATED on the Saturday 31st of May from 18.00 until the sun rises - please click and fill out the form below before 20th of April so I can plan the most amazing evening for us all!!
+    </p>
+</section>
+<div id="anmalan-button-cntr">
+    <p>ANMÄLAN</p>
+</div>
 
-        <div id="bottom-line"></div>
-    </main>
+    <div id="bottom-line"></div>
+</main>
 
 
-    <script>
-        document.addEventListener("DOMContentLoaded", (event) => {
+<script>
+    document.addEventListener("DOMContentLoaded", (event) => {
             const buttonCntr = document.getElementById("anmalan-button-cntr");
 
             buttonCntr.addEventListener("click", () => {
